--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html  lang="en">
   <head>
   <title>For my baby Pepsi</title>
-  <link rel = "stylesheet" type="text/css" href="estilo.css"/>
+  <link href = https://favanso.github.io/pepsi-dog/style.css rel="stylesheet"/>
 </head>
 <body>
 
